Bug-Fixed: Button layout issue in edit bookingand booking form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1506,28 +1506,11 @@ section {
 # logIn page 
 --------------------------------------------------------------*/
 
-account-btn {
-  border: 2px solid #cda45e;
-  color: #fff;
-  background: rgb(0, 0, 0);
-  border-radius: 50px;
-  padding: 8px 25px;
-  text-transform: uppercase;
-  font-size: 13px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  transition: 0.3s;
-}
-
-.account-btn:hover {
-  background: #cda45e;
-  color: #fff;
-}
-
 .heigth {
   min-height: 80vh;
 }
 
+.booking-form,
 .login-form {
   background-image: url(../../static/img/slide/slide-1.jpg);
   transition-property: opacity;
@@ -1541,8 +1524,27 @@ account-btn {
 }
 
 /*--------------------------------------------------------------
-# Book A Table
+# Booking and edit booking
 --------------------------------------------------------------*/
+.booking-btn{
+  background: #ffb03b;
+  color: #fff;
+  border-radius: 50px;
+  border: transparent;
+  margin: 0 0 0 20px;
+  padding: 10px 25px;
+  font-size: 13px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  white-space: nowrap;
+}
+
+.booking-btn:hover {
+  background: #ffa012;
+  color: #fff;
+}
+
 .double-booking {
   text-transform: capitalize;
   font-style: normal;
